parser.output
Terminals unused in grammar

   ERROR


Rules useless in parser due to conflicts

   39 $@9: %empty


State 33 conflicts: 1 reduce/reduce
State 50 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 $@1: %empty

    2 Program: $@1 Funcs

    3 Funcs: %empty
    4      | FuncDecl Funcs

    5 $@2: %empty

    6 $@3: %empty

    7 $@4: %empty

    8 $@5: %empty

    9 $@6: %empty

   10 FuncDecl: RetType $@2 ID $@3 $@4 LPAREN Formals RPAREN LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE

   11 RetType: Type
   12        | VOID

   13 Formals: %empty
   14        | FormalsList

   15 FormalsList: FormalDecl
   16            | FormalDecl COMMA FormalsList

   17 FormalDecl: Type ID
   18           | Type ID LBRACK NUM RBRACK
   19           | Type ID LBRACK NUM B RBRACK

   20 Statments: Statement
   21          | Statments Statement

   22 Statement: LBRACE OPENSCOPE Statments CLOSESCOPE RBRACE
   23          | Type ID SC
   24          | Type ID ASSIGN Exp SC
   25          | Type ID LBRACK NUM RBRACK SC
   26          | Type ID LBRACK NUM B RBRACK SC
   27          | ID ASSIGN Exp SC
   28          | ID LBRACK Exp RBRACK ASSIGN Exp SC
   29          | Call SC
   30          | RETURN SC
   31          | RETURN Exp SC
   32          | IF LPAREN Exp RPAREN OPENSCOPE Statement CLOSESCOPE
   33          | IF LPAREN Exp RPAREN OPENSCOPE Statement CLOSESCOPE ELSE OPENSCOPE Statement CLOSESCOPE

   34 $@7: %empty

   35 Statement: WHILE LPAREN Exp RPAREN $@7 OPENSCOPE Statement CLOSESCOPE
   36          | BREAK SC

   37 $@8: %empty

   38 Call: ID $@8 LPAREN ExpList RPAREN

   39 $@9: %empty

   40 Call: ID $@9 LPAREN RPAREN

   41 ExpList: Exp
   42        | Exp COMMA ExpList

   43 Type: INT
   44     | BYTE
   45     | BOOL

   46 Exp: LPAREN Exp RPAREN
   47    | ID LBRACK Exp RBRACK
   48    | Exp SUB Exp
   49    | Exp ADD Exp
   50    | Exp MUL Exp
   51    | Exp DIV Exp
   52    | ID
   53    | Call
   54    | NUM
   55    | NUM B
   56    | STRING
   57    | TRUE
   58    | FALSE
   59    | NOT Exp
   60    | Exp AND Exp
   61    | Exp OR Exp
   62    | Exp EQ Exp
   63    | Exp NEQ Exp
   64    | Exp LT Exp
   65    | Exp GT Exp
   66    | Exp LTE Exp
   67    | Exp GTE Exp

   68 OPENSCOPE: %empty

   69 CLOSESCOPE: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 10 17 18 19 23 24 25 26 27 28 38 40 47 52
NUM (259) 18 19 25 26 54 55
B (260) 19 26 55
STRING (261) 56
TRUE (262) 57
FALSE (263) 58
VOID (264) 12
INT (265) 43
IFX (266)
ELSE (267) 33
BOOL (268) 45
BREAK (269) 36
COMMA (270) 16 42
BYTE (271) 44
IF (272) 32 33
RETURN (273) 30 31
SC (274) 23 24 25 26 27 28 29 30 31 36
WHILE (275) 35
ERROR (276)
ASSIGN (277) 24 27 28
OR (278) 61
AND (279) 60
EQ (280) 62
NEQ (281) 63
LT (282) 64
GT (283) 65
LTE (284) 66
GTE (285) 67
ADD (286) 49
SUB (287) 48
DIV (288) 51
MUL (289) 50
NOT (290) 59
LBRACE (291) 10 22
RBRACE (292) 10 22
LBRACK (293) 18 19 25 26 28 47
RBRACK (294) 18 19 25 26 28 47
LPAREN (295) 10 32 33 35 38 40 46
RPAREN (296) 10 32 33 35 38 40 46


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 2, on right: 0
$@1 (44)
    on left: 1, on right: 2
Funcs (45)
    on left: 3 4, on right: 2 4
FuncDecl (46)
    on left: 10, on right: 4
$@2 (47)
    on left: 5, on right: 10
$@3 (48)
    on left: 6, on right: 10
$@4 (49)
    on left: 7, on right: 10
$@5 (50)
    on left: 8, on right: 10
$@6 (51)
    on left: 9, on right: 10
RetType (52)
    on left: 11 12, on right: 10
Formals (53)
    on left: 13 14, on right: 10
FormalsList (54)
    on left: 15 16, on right: 14 16
FormalDecl (55)
    on left: 17 18 19, on right: 15 16
Statments (56)
    on left: 20 21, on right: 10 21 22
Statement (57)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 35 36, on right: 20
    21 32 33 35
$@7 (58)
    on left: 34, on right: 35
Call (59)
    on left: 38 40, on right: 29 53
$@8 (60)
    on left: 37, on right: 38
$@9 (61)
    on left: 39, on right: 40
ExpList (62)
    on left: 41 42, on right: 38 42
Type (63)
    on left: 43 44 45, on right: 11 17 18 19 23 24 25 26
Exp (64)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65 66 67, on right: 24 27 28 31 32 33 35 41 42 46 47 48 49 50
    51 59 60 61 62 63 64 65 66 67
OPENSCOPE (65)
    on left: 68, on right: 10 22 32 33 35
CLOSESCOPE (66)
    on left: 69, on right: 10 22 32 33 35


State 0

    0 $accept: . Program $end
    1 $@1: . %empty
    2 Program: . $@1 Funcs

    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 . Funcs
    3 Funcs: . %empty  [$end]
    4      | . FuncDecl Funcs
   10 FuncDecl: . RetType $@2 ID $@3 $@4 LPAREN Formals RPAREN LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE
   11 RetType: . Type
   12        | . VOID
   43 Type: . INT
   44     | . BYTE
   45     | . BOOL

    VOID  shift, and go to state 4
    INT   shift, and go to state 5
    BOOL  shift, and go to state 6
    BYTE  shift, and go to state 7

    $default  reduce using rule 3 (Funcs)

    Funcs     go to state 8
    FuncDecl  go to state 9
    RetType   go to state 10
    Type      go to state 11


State 3

    0 $accept: Program $end .

    $default  accept


State 4

   12 RetType: VOID .

    $default  reduce using rule 12 (RetType)


State 5

   43 Type: INT .

    $default  reduce using rule 43 (Type)


State 6

   45 Type: BOOL .

    $default  reduce using rule 45 (Type)


State 7

   44 Type: BYTE .

    $default  reduce using rule 44 (Type)


State 8

    2 Program: $@1 Funcs .

    $default  reduce using rule 2 (Program)


State 9

    3 Funcs: . %empty  [$end]
    4      | . FuncDecl Funcs
    4      | FuncDecl . Funcs
   10 FuncDecl: . RetType $@2 ID $@3 $@4 LPAREN Formals RPAREN LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE
   11 RetType: . Type
   12        | . VOID
   43 Type: . INT
   44     | . BYTE
   45     | . BOOL

    VOID  shift, and go to state 4
    INT   shift, and go to state 5
    BOOL  shift, and go to state 6
    BYTE  shift, and go to state 7

    $default  reduce using rule 3 (Funcs)

    Funcs     go to state 12
    FuncDecl  go to state 9
    RetType   go to state 10
    Type      go to state 11


State 10

    5 $@2: . %empty
   10 FuncDecl: RetType . $@2 ID $@3 $@4 LPAREN Formals RPAREN LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE

    $default  reduce using rule 5 ($@2)

    $@2  go to state 13


State 11

   11 RetType: Type .

    $default  reduce using rule 11 (RetType)


State 12

    4 Funcs: FuncDecl Funcs .

    $default  reduce using rule 4 (Funcs)


State 13

   10 FuncDecl: RetType $@2 . ID $@3 $@4 LPAREN Formals RPAREN LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE

    ID  shift, and go to state 14


State 14

    6 $@3: . %empty
   10 FuncDecl: RetType $@2 ID . $@3 $@4 LPAREN Formals RPAREN LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE

    $default  reduce using rule 6 ($@3)

    $@3  go to state 15


State 15

    7 $@4: . %empty
   10 FuncDecl: RetType $@2 ID $@3 . $@4 LPAREN Formals RPAREN LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE

    $default  reduce using rule 7 ($@4)

    $@4  go to state 16


State 16

   10 FuncDecl: RetType $@2 ID $@3 $@4 . LPAREN Formals RPAREN LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE

    LPAREN  shift, and go to state 17


State 17

   10 FuncDecl: RetType $@2 ID $@3 $@4 LPAREN . Formals RPAREN LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE
   13 Formals: . %empty  [RPAREN]
   14        | . FormalsList
   15 FormalsList: . FormalDecl
   16            | . FormalDecl COMMA FormalsList
   17 FormalDecl: . Type ID
   18           | . Type ID LBRACK NUM RBRACK
   19           | . Type ID LBRACK NUM B RBRACK
   43 Type: . INT
   44     | . BYTE
   45     | . BOOL

    INT   shift, and go to state 5
    BOOL  shift, and go to state 6
    BYTE  shift, and go to state 7

    $default  reduce using rule 13 (Formals)

    Formals      go to state 18
    FormalsList  go to state 19
    FormalDecl   go to state 20
    Type         go to state 21


State 18

   10 FuncDecl: RetType $@2 ID $@3 $@4 LPAREN Formals . RPAREN LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE

    RPAREN  shift, and go to state 22


State 19

   14 Formals: FormalsList .

    $default  reduce using rule 14 (Formals)


State 20

   15 FormalsList: FormalDecl .  [RPAREN]
   16            | FormalDecl . COMMA FormalsList

    COMMA  shift, and go to state 23

    $default  reduce using rule 15 (FormalsList)


State 21

   17 FormalDecl: Type . ID
   18           | Type . ID LBRACK NUM RBRACK
   19           | Type . ID LBRACK NUM B RBRACK

    ID  shift, and go to state 24


State 22

   10 FuncDecl: RetType $@2 ID $@3 $@4 LPAREN Formals RPAREN . LBRACE OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE

    LBRACE  shift, and go to state 25


State 23

   15 FormalsList: . FormalDecl
   16            | . FormalDecl COMMA FormalsList
   16            | FormalDecl COMMA . FormalsList
   17 FormalDecl: . Type ID
   18           | . Type ID LBRACK NUM RBRACK
   19           | . Type ID LBRACK NUM B RBRACK
   43 Type: . INT
   44     | . BYTE
   45     | . BOOL

    INT   shift, and go to state 5
    BOOL  shift, and go to state 6
    BYTE  shift, and go to state 7

    FormalsList  go to state 26
    FormalDecl   go to state 20
    Type         go to state 21


State 24

   17 FormalDecl: Type ID .  [COMMA, RPAREN]
   18           | Type ID . LBRACK NUM RBRACK
   19           | Type ID . LBRACK NUM B RBRACK

    LBRACK  shift, and go to state 27

    $default  reduce using rule 17 (FormalDecl)


State 25

   10 FuncDecl: RetType $@2 ID $@3 $@4 LPAREN Formals RPAREN LBRACE . OPENSCOPE $@5 Statments $@6 CLOSESCOPE RBRACE
   68 OPENSCOPE: . %empty

    $default  reduce using rule 68 (OPENSCOPE)

    OPENSCOPE  go to state 28


State 26

   16 FormalsList: FormalDecl COMMA FormalsList .

    $default  reduce using rule 16 (FormalsList)


State 27

   18 FormalDecl: Type ID LBRACK . NUM RBRACK
   19           | Type ID LBRACK . NUM B RBRACK

    NUM  shift, and go to state 29


State 28

    8 $@5: . %empty
   10 FuncDecl: RetType $@2 ID $@3 $@4 LPAREN Formals RPAREN LBRACE OPENSCOPE . $@5 Statments $@6 CLOSESCOPE RBRACE

    $default  reduce using rule 8 ($@5)

    $@5  go to state 30


State 29

   18 FormalDecl: Type ID LBRACK NUM . RBRACK
   19           | Type ID LBRACK NUM . B RBRACK

    B       shift, and go to state 31
    RBRACK  shift, and go to state 32


State 30

   10 FuncDecl: RetType $@2 ID $@3 $@4 LPAREN Formals RPAREN LBRACE OPENSCOPE $@5 . Statments $@6 CLOSESCOPE RBRACE
   20 Statments: . Statement
   21          | . Statments Statement
   22 Statement: . LBRACE OPENSCOPE Statments CLOSESCOPE RBRACE
   23          | . Type ID SC
   24          | . Type ID ASSIGN Exp SC
   25          | . Type ID LBRACK NUM RBRACK SC
   26          | . Type ID LBRACK NUM B RBRACK SC
   27          | . ID ASSIGN Exp SC
   28          | . ID LBRACK Exp RBRACK ASSIGN Exp SC
   29          | . Call SC
   30          | . RETURN SC
   31          | . RETURN Exp SC
   32          | . IF LPAREN Exp RPAREN OPENSCOPE Statement CLOSESCOPE
   33          | . IF LPAREN Exp RPAREN OPENSCOPE Statement CLOSESCOPE ELSE OPENSCOPE Statement CLOSESCOPE
   35          | . WHILE LPAREN Exp RPAREN $@7 OPENSCOPE Statement CLOSESCOPE
   36          | . BREAK SC
   38 Call: . ID $@8 LPAREN ExpList RPAREN
   40     | . ID $@9 LPAREN RPAREN
   43 Type: . INT
   44     | . BYTE
   45     | . BOOL

    ID      shift, and go to state 33
    INT     shift, and go to state 5
    BOOL    shift, and go to state 6
    BREAK   shift, and go to state 34
    BYTE    shift, and go to state 7
    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    LBRACE  shift, and go to state 38

    Statments  go to state 39
    Statement  go to state 40
    Call       go to state 41
    Type       go to state 42


State 31

   19 FormalDecl: Type ID LBRACK NUM B . RBRACK

    RBRACK  shift, and go to state 43


State 32

   18 FormalDecl: Type ID LBRACK NUM RBRACK .

    $default  reduce using rule 18 (FormalDecl)


State 33

   27 Statement: ID . ASSIGN Exp SC
   28          | ID . LBRACK Exp RBRACK ASSIGN Exp SC
   37 $@8: . %empty  [LPAREN]
   38 Call: ID . $@8 LPAREN ExpList RPAREN
   39 $@9: . %empty  [LPAREN]
   40 Call: ID . $@9 LPAREN RPAREN

    ASSIGN  shift, and go to state 44
    LBRACK  shift, and go to state 45

    LPAREN    reduce using rule 37 ($@8)
    LPAREN    [reduce using rule 39 ($@9)]
    $default  reduce using rule 37 ($@8)

    $@8  go to state 46
    $@9  go to state 47


State 34

   36 Statement: BREAK . SC

    SC  shift, and go to state 48


State 35

   32 Statement: IF . LPAREN Exp RPAREN OPENSCOPE Statement CLOSESCOPE
   33          | IF . LPAREN Exp RPAREN OPENSCOPE Statement CLOSESCOPE ELSE OPENSCOPE Statement CLOSESCOPE

    LPAREN  shift, and go to state 49


State 36

   30 Statement: RETURN . SC
   31          | RETURN . Exp SC
   38 Call: . ID $@8 LPAREN ExpList RPAREN
   40     | . ID $@9 LPAREN RPAREN
   46 Exp: . LPAREN Exp RPAREN
   47    | . ID LBRACK Exp RBRACK
   48    | . Exp SUB Exp
   49    | . Exp ADD Exp
   50    | . Exp MUL Exp
   51    | . Exp DIV Exp
   52    | . ID
   53    | . Call
   54    | . NUM
   55    | . NUM B
   56    | . STRING
   57    | . TRUE
   58    | . FALSE
   59    | . NOT Exp
   60    | . Exp AND Exp
   61    | . Exp OR Exp
   62    | . Exp EQ Exp
   63    | . Exp NEQ Exp
   64    | . Exp LT Exp
   65    | . Exp GT Exp
   66    | . Exp LTE Exp
   67    | . Exp GTE Exp

    ID      shift, and go to state 50
    NUM     shift, and go to state 51
    STRING  shift, and go to state 52
    TRUE    shift, and go to state 53
    FALSE   shift, and go to state 54
    SC      shift, and go to state 55
    NOT     shift, and go to state 56
    LPAREN  shift, and go to state 57

    Call  go to state 58
    Exp   go to state 59


State 37

   35 Statement: WHILE . LPAREN Exp RPAREN $@7 OPENSCOPE Statement CLOSESCOPE

    LPAREN  shift, and go to state 60


State 38

   22 Statement: LBRACE . OPENSCOPE Statments CLOSESCOPE RBRACE
   68 OPENSCOPE: . %empty

    $default  reduce using rule 68 (OPENSCOPE)

    OPENSCOPE  go to state 61


State 39
